--- a/css/header.css
+++ b/css/header.css
@@ -1,47 +1,126 @@
 header {
-  background: linear-gradient(90deg, #fafafa, #fbfbfb, #fafafa);
-  display: flex;
-  justify-content: center;
   position: relative;
-  white-space: nowrap;
-  box-shadow: 2px 2px 3px #0061;
-}
-header item_holder {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-width: 100px;
-}
-header a {
-  all: unset;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 32px;
-  padding: 0 8px;
-  box-sizing: border-box;
-  cursor: pointer;
-  border-radius: 4px;
-}
-header a.active {
-  background: #d9d7ff;
-  cursor: default;
-}
-header a:hover {
-  background: #d9d7ff70;
-}
-header a.active:hover {
-  background: #d9d7ff;
-}
-header items {
-  position: absolute;
-  top: 100%;
-  background: #fff;
-  gap: 4px;
-  padding: 8px;
+  z-index: 1000;
   display: grid;
-  border-radius: 4px;
-  box-shadow: 2px 2px 3px #0061;
+  grid-template-rows: 100% calc(100vh - 100%);
 }
-header item_holder:not(:hover) items { display: block;display: none;}
+header #header_switch {
+  all: unset;
+}
+@media (max-width: 767px) {
+  header:after {
+    content: "";
+    pointer-events: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    box-shadow: 2px 2px 3px #0061;
+  }
+  header #header_switch {
+    justify-self: end;
+    width: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  header #header_switch:after {
+    content: "";
+    width: 20px;
+    height: 13px;
+    background: #3c3c3c;
+    clip-path: polygon(0 0, 0 10%, 47% 100%, 53% 100%, 100% 10%, 100% 0, 90% 0, 50% 80%, 10% 0);
+  }
+  header #header_switch.open:after {
+    transform: rotate(180deg);
+  }
+  header #header {
+    height: 100%;
+    background: linear-gradient(90deg, #fafafa, #fbfbfb, #fafafa);
+    display: flex;
+    flex-direction: column;
+    padding: 16px 8px;
+    gap: 16px;
+    box-sizing: border-box;
+    overflow: auto;
+  }
+  header #header_switch:not(.open) + #header {
+    display: none;
+  }
+  header item_holder {
+    display: grid;
+    gap: 8px;
+  }
+  header items {
+    display: grid;
+    gap: 8px;
+    padding-left: 16px;
+  }
+  header a {
+    all: unset;
+    cursor: pointer;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    height: 32px;
+    padding: 0 8px;
+  }
+  header a.active {
+    background: #d9d7ff;
+    cursor: default;
+  }
+}
+@media (min-width: 768px) {
+  header #header_switch {
+    display: none;
+  }
+  header #header {
+    height: 100%;
+    background: linear-gradient(90deg, #fafafa, #fbfbfb, #fafafa);
+    display: flex;
+    justify-content: center;
+    position: relative;
+    white-space: nowrap;
+    box-shadow: 2px 2px 3px #0061;
+  }
+  header item_holder {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 100px;
+  }
+  header a {
+    all: unset;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 32px;
+    padding: 0 8px;
+    box-sizing: border-box;
+    cursor: pointer;
+    border-radius: 4px;
+  }
+  header a.active {
+    background: #d9d7ff;
+    cursor: default;
+  }
+  header a:hover {
+    background: #d9d7ff70;
+  }
+  header a.active:hover {
+    background: #d9d7ff;
+  }
+  header items {
+    position: absolute;
+    top: 100%;
+    background: #fff;
+    gap: 4px;
+    padding: 8px;
+    display: grid;
+    border-radius: 4px;
+    box-shadow: 2px 2px 3px #0061;
+  }
+  header item_holder:not(:hover) items { display: block;display: none;}
+}
