--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ body {
   box-sizing: border-box;
   margin: 0 auto;
   padding: 32px 16px 64px;
-  width: 100vw;
+  width: 100%;
   max-width: 900px;
 }
 
@@ -36,6 +36,19 @@ h2 {
   margin: 0 0 24px;
   border-bottom: 1px solid #b3bcd1;
   padding-bottom: 8px;
+}
+
+h3 {
+  font-size: 20px;
+  font-weight: 500;
+  margin: 0 0 8px;
+}
+
+hr {
+  all: unset;
+  border-bottom: 1px solid #b3bcd1;
+  display: block;
+  margin: 32px 0;
 }
 
 @media (max-width: 767px) {
