--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,20 @@ body {
   max-width: 900px;
 }
 
+.pop_mask {
+  overflow: hidden;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 2000;
+  width: 100%;
+  height: 100%;
+  background: #000a;
+}
+.pop_mask.hidden {
+  display: none;
+}
+
 h1 {
   font-size: 32px;
   font-weight: 700;
